<?xml version="1.0" encoding="utf-8"?>
<resources>

<<<<<<< HEAD
    <string name="hello">Enter and view your related info</string>
    <string name="app_name">Android Base</string>
    <string name="add_new_person">Add a New Person</string>
    <string name="view_person">View a Person</string>
    <string name="pick_new_person">Pick a new person</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="save">Save</string>
    <string name="colon"> : </string>
    <string name="valid_name">Name added</string>
    <string name="contentDescription">Image to put meaning to the numbers.</string>
    <string name="settingsButton">Settings</string>
    <string name="singleUser">Enable Single User Mode?</string>
=======
    <string name="hello">Hello TenIdeas!</string>
    <string name="app_name">TenIdeas</string>
    <string name="addButton">Add a New Person</string>
    <string name="viewButton">View a Person</string>
    <string name="addTitle">Add a new person</string>
    <string name="viewTitle">Pick a new person</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="name">TODO</string>
    <string name="email">E-mail</string>
    <string name="save">Save</string>

>>>>>>> b587450cb0ce1b7e9e7cb4994b104d264d3cfa59
</resources>